--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -3,12 +3,20 @@
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
-        <PublishAot>true</PublishAot>
+        <!-- <PublishAot>true</PublishAot> -->
         <InvariantGlobalization>true</InvariantGlobalization>
     </PropertyGroup>
-    
+
     <ItemGroup>
+        <PackageReference Include="FluentValidation" Version="11.9.0" />
+        <PackageReference Include="Light.EmbeddedResources" Version="1.1.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <EmbeddedResource Include="DatabaseAccess\DatabaseSetup.sql" />
     </ItemGroup>
 
 </Project>
