--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,2 +1,5 @@
 {
+    "ConnectionStrings": {
+        "Default": "Server=localhost; Port=5432; Database=ContactsDb; User Id=webapp; Password=password"
+    }
 }
