--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -3,20 +3,22 @@
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
-        <!-- <PublishAot>true</PublishAot> -->
+        <PublishAot>true</PublishAot> 
         <InvariantGlobalization>true</InvariantGlobalization>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="FluentValidation" Version="11.9.0" />
         <PackageReference Include="Light.EmbeddedResources" Version="1.1.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3" />
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+        <PackageReference Include="Npgsql" Version="8.0.2" />
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
     </ItemGroup>
 
     <ItemGroup>
         <EmbeddedResource Include="DatabaseAccess\DatabaseSetup.sql" />
+        <EmbeddedResource Include="Contacts\GetContacts\GetContacts.sql" />
+        <EmbeddedResource Include="Contacts\UpdateContact\GetContact.sql" />
+        <EmbeddedResource Include="Contacts\UpdateContact\UpdateContact.sql" />
     </ItemGroup>
 
 </Project>
