feat: use Dapper AOT in three of four endpoints
Signed-off-by: Kenny Pflug <kenny.pflug@live.de>

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <PublishAot>true</PublishAot> 
         <InvariantGlobalization>true</InvariantGlobalization>
+        <InterceptorsPreviewNamespaces>$(InterceptorsPreviewNamespaces);Dapper.AOT</InterceptorsPreviewNamespaces>
     </PropertyGroup>
 
     <ItemGroup>
@@ -12,6 +13,8 @@
         <PackageReference Include="Light.EmbeddedResources" Version="1.1.0" />
         <PackageReference Include="Npgsql" Version="8.0.2" />
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+        <PackageReference Include="Dapper" Version="2.1.35" />
+        <PackageReference Include="Dapper.AOT" Version="1.0.31" />
     </ItemGroup>
 
     <ItemGroup>
